# cryptocrowned_dex_

./: deploy.sh
cryptocrowned_dex/: Cargo.toml
cryptocrowned_dex/src/: copy_sim.rs  copy_trade.rs  erc20.rs  execute.rs  main.rs  quote.rs  risk.rs  tokens.rs  traders.rs  wallet.rs
frontend-react/src/: App.jsx
