[package]
name = "cryptocrowned_dex"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.3.1+deprecated"
env_logger = "0.11"
log = "0.4"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# ERC20 approve encoding + big integers
ethers-core = "2"
hex = "0.4"
